--- a/covisignal_accueil.html
+++ b/covisignal_accueil.html
@@ -28,13 +28,24 @@
         </header>
 
           <section>
-            <article id="mapid"></article>
+            <article id="mapid">
+              <img src="serveimage.jpeg" alt="carte defaut">
+            </article>
               <aside>
                 <p>
-                Cas d'infection déclaré depuis plus de 14 jours <br><br>
-                Cas d'infection probable déclaré depuis moins de 14 jours <br><br>
-                Cas d'infection avérée déclaré depuis moins de 14 jours<br>
+                  <img src="covi19_ellipse_blue.png" alt="balise bleue">
+                  Cas d'infection déclaré depuis plus de 14 jours
                 </p>
+                <p>
+                  <img src="covi19_ellipse_orange.png" alt="balise orange">
+                  Cas d'infection probable déclaré depuis moins de 14 jours
+                </p>
+                <p>
+                  <img src="covi19_ellipse_red.png" alt="balise rouge">
+                  Cas d'infection avérée déclaré depuis moins de 14 jours
+                </p>
+
+
                   <div class="button">
                     <a href="je_me_signale_1.html" title="Je me signale 1/4"><img src="covi19_signal_button.png" alt="Bouton 'Je me signale'"></a>
                   </div>
