--- a/merci.html
+++ b/merci.html
@@ -27,29 +27,11 @@
       </header>
 
         <section id="text_page">
-          <div id="signal">
-            <a href="je_me_signale_3.html" title="Je me signale 3/4"><img src="covi19_go_back_button.png" alt="go back button"></a>
-            <h1>Je me signale <span>4/4</span></h1>
-              <div id="invisible"></div>
-          </div>
-
-          <h2>Veuillez entrer votre code postal</h2>
-
-          <form class="" action="traitement" method="post">
-            <p><label>Saisissez les 5 chiffres de votre code postal ici:</label> </br>
-<input type="text" name="code postal" id="code postal" value="00000">
-            </p>
-          </form>
 
 
-        <div class="button_choice">
-          <div class="button">
-            <a href="covisignal_accueil.html" title="CoViSignal Accueil"><img src="covi19_annuler_button.png" alt="annuler button"></a>
-          </div>
-          <div class="button">
-            <a href="merci.html" title="Merci"><img src="covi19_jevalide_button.png" alt=""></a>
-          </div>
-        </div>
+          <h2>Votre réponse a bien été enregistrée,<br>merci pour votre contribution.</h2>
+
+
 
 
 
