--- a/merci.html
+++ b/merci.html
@@ -26,7 +26,7 @@
         </nav>
       </header>
 
-        <section id="text_page">
+        <section id="merci">
 
 
           <h2>Votre réponse a bien été enregistrée,<br>merci pour votre contribution.</h2>
