--- a/covisignal_accueil.html
+++ b/covisignal_accueil.html
@@ -28,9 +28,8 @@
         </header>
 
           <section>
-            <article id="mapid">
-              <img src="serveimage.jpeg" alt="carte defaut">
-            </article>
+              <img src="serveimage.jpeg" alt="carte defaut" id="mapid">
+          
               <aside>
                 <p>
                   <img src="covi19_ellipse_blue.png" alt="balise bleue">
