--- a/comment_ca_marche.html
+++ b/comment_ca_marche.html
@@ -54,10 +54,13 @@
             s'effectue grâce au code postal que vous aurez renseigné dans le formulaire. Une fois que
             vous avez quitté le site, sa durée d'apparition est de 14 jours pour les balises orange et
             rouge, qui se transforment automatiquement en balises bleues au bout de ce laps de temps.</p>
+            <p>Afin de limiter toute utilisation abusive, une restriction d'un seul signalement par
+              heure sur le même appareil est mise en place.
+            </p>
 
 
             <div class="button">
-              <a href="je_me_signale_1.html" title="Je me signale 1/4"><img src="covi19_signal_button.png" alt="Bouton 'Je me signale'"></a>
+              <a href="pourquoi.html" title="Pourquoi se signaler?"><img src="covi19_jaicompris_button.png" alt="Bouton 'Je me signale'"></a>
             </div>
 
       </section>
